--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -7,31 +7,24 @@
         <VerticalStackLayout
             Padding="30,0"
             Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+            
 
             <Label
-                Text="Hello, Everyone"
+                Text="Treeni App"
                 Style="{StaticResource Headline}"
                 SemanticProperties.HeadingLevel="Level1" />
 
             <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
+                Text="App, jonka avulla treenitavoitteiden saavuttaminen on mahdollista"
                 Style="{StaticResource SubHeadline}"
                 SemanticProperties.HeadingLevel="Level2"
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+          
 
             <Button x:Name="Lisatieto" Text="Lisätietoa" Clicked="Lisatieto_Clicked" HorizontalOptions="Fill" />
+            
+            
         </VerticalStackLayout>
     </ScrollView>
 
