--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -4,28 +4,29 @@
              x:Class="TreeniApp.MainPage">
 
     <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            
+        <VerticalStackLayout Padding="30,0" Spacing="25">
+            <Label Text="Treeni App"
+                   Style="{StaticResource Headline}"
+                   SemanticProperties.HeadingLevel="Level1" />
 
-            <Label
-                Text="Treeni App"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="App, jonka avulla treenitavoitteiden saavuttaminen on mahdollista"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-          
+            <Label Text="App, jonka avulla treenitavoitteiden saavuttaminen on mahdollista"
+                   Style="{StaticResource SubHeadline}"
+                   SemanticProperties.HeadingLevel="Level2"
+                   SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
 
             <Button x:Name="Lisatieto" Text="Lisätietoa" Clicked="Lisatieto_Clicked" HorizontalOptions="Fill" />
-            
-            
+
+            <ListView x:Name="userList" SelectionMode="Single" Margin="20, 0">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="{Binding Username}" FontSize="22" VerticalOptions="StartAndExpand" />
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </VerticalStackLayout>
     </ScrollView>
-
 </ContentPage>
