--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -22,7 +22,7 @@
                     <DataTemplate>
                         <ViewCell>
                             <StackLayout Orientation="Horizontal">
-                                <Label Text="{Binding Username}" FontSize="22" VerticalOptions="StartAndExpand" />
+                                <Label Text="{Binding Etunimi}" FontSize="22" VerticalOptions="StartAndExpand" />
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
